# openai-secretary

./: .gitignore  LICENSE  README.md  pyproject.toml
native/: vector_cosine_similarity.c
openai_secretary/: __init__.py  __main__.py  agent.py  chat.py
openai_secretary/database/: __init__.py  connection.py  models.py
openai_secretary/discord/: __init__.py  __main__.py  bot.py
openai_secretary/resource/: __init__.py  emotion.py  iagent.py  resources.py
